hphp/test/slow/memoize_on_lambda4.php.expectf
Fatal error: <<__Memoize>> attribute is not allowed on lambdas or anonymous functions. in %s/test/slow/memoize_on_lambda4.php on line 5